--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -5,3 +5,8 @@
   margin-top: 40px;
   color: var(--ion-color-medium);
 }
+
+.list-mini-content {
+background-color: yellow;
+background : yellow;
+}
