--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,8 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="home"></ion-back-button>
-    </ion-buttons>
+
     <ion-buttons slot="end">
       <ion-button >
         <ion-button *ngIf="item.endAt" fill="outline" slot="end" (click)="exportPdf()">Export</ion-button>
@@ -20,22 +18,34 @@
 
 <ion-content padding *ngIf="item" >
   <div class="printable-area" id ="printable-area">
-  <ion-card *ngFor="let clue of item.clues" color="light">
-    <ion-item>
-      <ion-icon name="car" slot="start"></ion-icon>
-      <ion-label>{{clue.name}}</ion-label>
-      <ion-button fill="outline" slot="end" [disabled]="item.endAt || clue.firebaseImageURL" (click)="selectImage(clue)">Upload Image</ion-button>
-    </ion-item>
-
-    <ion-card-content>
+    <!--<div *ngFor="let clue of item.clues; let i=index" color="light">
       <div>
-      {{clue.description}}
+        <h2>{{clue.name}}</h2>
+        <button [disabled]="item.endAt || clue.firebaseImageURL" (click)="selectImage(clue)">Upload Image</button>
       </div>
-      <div *ngIf="clue.localImageURL">
-        <img [src] = "clue.localImageURL">
+      <div>
+        {{clue.description}}
       </div>
-    </ion-card-content>
-  </ion-card>
+      <div >
+        <img id="img{{i}}" src = "./assets/imgs/sp_image.png">
+      </div>
+    </div>-->
+    <ion-card *ngFor="let clue of item.clues; let i=index" color="light" >
+      <ion-item>
+        <ion-icon name="car" slot="start"></ion-icon>
+        <ion-label>{{clue.name}}</ion-label>
+        <ion-button fill="outline" slot="end" [disabled]="item.endAt || clue.firebaseImageURL" (click)="selectImage(clue)">Upload Image</ion-button>
+      </ion-item>
+
+      <ion-card-content>
+        <div>
+        {{clue.description}}
+        </div>
+        <div *ngIf="clue.localImageURL">
+          <img id="img{{i}}" [src] = "clue.localImageURL">
+        </div>
+      </ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
 
