CSS chnages added

--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -3,14 +3,14 @@
 
     <ion-buttons slot="end">
       <ion-button >
-        <ion-button *ngIf="item.endAt" fill="outline" slot="end" (click)="exportPdf()">Export</ion-button>
-        <ion-button *ngIf="!item.endAt" fill="outline" slot="end" (click)="finish()">Finish</ion-button>
+        <ion-button *ngIf="item && item.endAt" fill="outline" slot="end" (click)="exportPdf()">Export</ion-button>
+        <ion-button *ngIf="item && !item.endAt" fill="outline" slot="end" (click)="finish()">Finish</ion-button>
         <ion-button (click)="logout()" slot="end">
           <ion-icon slot="icon-only" name="log-out"></ion-icon>
         </ion-button>
       </ion-button>
     </ion-buttons>
-    <ion-title>MPF Carnaama <br/> {{item.eventName}} &nbsp; Started at {{item.startedAt | date:'medium' }}
+    <ion-title>Snap Hunt<br/> {{item ? item.eventName : ''}} &nbsp; {{item ? (item.startedAt | date:'medium') : '' }}
     </ion-title>
 
   </ion-toolbar>
@@ -18,34 +18,28 @@
 
 <ion-content padding *ngIf="item" >
   <div class="printable-area" id ="printable-area">
-    <!--<div *ngFor="let clue of item.clues; let i=index" color="light">
-      <div>
-        <h2>{{clue.name}}</h2>
-        <button [disabled]="item.endAt || clue.firebaseImageURL" (click)="selectImage(clue)">Upload Image</button>
-      </div>
-      <div>
-        {{clue.description}}
-      </div>
-      <div >
-        <img id="img{{i}}" src = "./assets/imgs/sp_image.png">
-      </div>
-    </div>-->
-    <ion-card *ngFor="let clue of item.clues; let i=index" color="light" >
-      <ion-item>
-        <ion-icon name="car" slot="start"></ion-icon>
-        <ion-label>{{clue.name}}</ion-label>
-        <ion-button fill="outline" slot="end" [disabled]="item.endAt || clue.firebaseImageURL" (click)="selectImage(clue)">Upload Image</ion-button>
-      </ion-item>
+    <b>{{item ? item.eventName : ''}} &nbsp; Started at {{item ? (item.startedAt | date:'medium') : '' }} </b>
 
-      <ion-card-content>
-        <div>
-        {{clue.description}}
-        </div>
-        <div *ngIf="clue.localImageURL">
-          <img id="img{{i}}" [src] = "clue.localImageURL">
-        </div>
-      </ion-card-content>
-    </ion-card>
+    <ion-slides [options]="sliderConfig">
+      <ion-slide *ngFor="let clue of item.clues; let i=index">
+        <ion-card  color="light" >
+          <ion-item>
+            <ion-icon name="car" slot="start"></ion-icon>
+            <ion-label>{{clue.name}}</ion-label>
+            <ion-button fill="outline" slot="end" [disabled]="item.endAt || clue.firebaseImageURL" (click)="selectImage(clue)">Upload Image</ion-button>
+          </ion-item>
+
+          <ion-card-content>
+            <div>
+            {{clue.description}}
+            </div>
+            <div *ngIf="clue.localImageURL">
+              <img id="img{{i}}" [src] = "clue.localImageURL">
+            </div>
+          </ion-card-content>
+        </ion-card>
+      </ion-slide>
+    </ion-slides>
   </div>
 </ion-content>
 
