--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -5,7 +5,7 @@
         <ion-icon slot="icon-only" name="log-out"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>MPF Carnaama</ion-title>
+    <ion-title>Snap Hunt</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -23,7 +23,7 @@
         <!--<ion-label> <b>Theme Name : &nbsp; &nbsp;</b> {{item.payload.doc.data().themeName}}</ion-label>
         <ion-label> <b>Team Points : &nbsp; &nbsp; </b> {{item.payload.doc.data().points}}</ion-label>-->
         <br/>
-        to the first event of MPF Pune South for fiscal year 2019-20 i.e. <b>Snap Hunt Caarnaama</b>.
+        to the first event of MPF Pune South for fiscal year 2019-20 i.e. <b>Snap Hunt Caa'rNaaama</b>.
         <br/>
         In this game, teams are given Clues and Activities. They have to identify the destination and take photos along
         with their other team mates.
@@ -32,7 +32,7 @@
         winner <b>Mr. Sanjay Takale</b>
         <br/>
         This event is Sponsered by <br/>
-        <img src="./assets/imgs/sponser_image.png">
+        <img src="./assets/imgs/sp_image.png">
         <br/>
         <ion-button  fill="outline" slot="end" (click)="gotoHome(item)">Go To Event</ion-button>
       </ion-list>
