--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,32 +5,44 @@
         <ion-icon slot="icon-only" name="log-out"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>MPF Carnaama <br/> Events List</ion-title>
+    <ion-title>Snap Hunt <br/> Events List</ion-title>
 
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="items" class="list-mini-content" padding>
-  <div *ngIf="items.length > 0" class="list-mini">
-    <ion-list *ngFor="let item of items">
-      <ion-item  >
-        <ion-thumbnail item-start>
-          <img [src]="item.payload.doc.data().image">
-        </ion-thumbnail>
-        <h2><b>{{item.payload.doc.data().name}}</b> </h2>
-        <p> <br>&nbsp; {{item.payload.doc.data().active ? "Started " : "will start " }} at {{item.payload.doc.data().startTime.toDate() | date : 'medium' }}
-        and end at
-        {{item.payload.doc.data().endTime.toDate() | date : 'medium'}} </p>
-        <ion-button round [disabled]=!item.payload.doc.data().active fill="outline" slot="end" (click)="startOrContinue(item)">{{item.eventActivated  ? "Continue" : "Start"}}</ion-button>
-      </ion-item>
-    </ion-list>
+<ion-content *ngIf="items"  padding>
+  <div *ngIf="items.length > 0" >
+    <ion-grid *ngFor="let item of items" text-wrap >
+      <div class="list-mini-content">
+      <ion-row>
+        <ion-col col-12>
+          <b>{{item.payload.doc.data().name}}</b>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2">
+          <ion-thumbnail>
+            <img [src]="item.payload.doc.data().image">
+          </ion-thumbnail>
+        </ion-col>
+        <ion-col size="6">
+              {{item.payload.doc.data().description}}
+        </ion-col>
+          <ion-col size="4">
+            <ion-button round [disabled]=!item.payload.doc.data().active fill="outline" (click)="startOrContinue(item)">{{item.eventActivated  ? "Continue" : "Start"}}</ion-button>
+        </ion-col>
+      </ion-row>
+      </div>
+      <ion-row><ion-col></ion-col></ion-row>
+      <ion-row></ion-row>
+    </ion-grid>
   </div>
   <div *ngIf="items.length == 0" class="empty-list">
     No Events available yet.
   </div>
   <br/>
   <br/>
-  <div>
+  <div class="rules">
     <b>Rules And Regulations </b>
     <br/>
     1. You are allowed to use google maps and also allowed to call your friends and Family.<br/>
