--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -19,14 +19,17 @@
 <ion-content padding *ngIf="item" >
   <div class="printable-area" id ="printable-area">
     <b>{{item ? item.eventName : ''}} &nbsp; Started at {{item ? (item.startedAt | date:'medium') : '' }} </b>
-
+    <br/>
+    <b> Your Speed : {{speed}} last Updated at {{ updateTS | date:'medium'}} <br/>
+         latitude : {{lat}}<br/>
+        longitude : {{lng}}</b>
     <ion-slides [options]="sliderConfig">
       <ion-slide *ngFor="let clue of item.clues; let i=index">
         <ion-card  color="light" >
           <ion-item>
             <ion-icon name="car" slot="start"></ion-icon>
             <ion-label>{{clue.name}}</ion-label>
-            <ion-button fill="outline" slot="end" [disabled]="item.endAt || clue.firebaseImageURL" (click)="selectImage(clue)">Upload Image</ion-button>
+            <ion-button fill="outline" slot="end" [disabled]="item.endAt || clue.firebaseImageURL" (click)="selectImage(clue)">Upload <br/> Image</ion-button>
           </ion-item>
 
           <ion-card-content>
