--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -18,3 +18,8 @@
   padding: 10px;
   box-shadow: 5px 10px 18px #888888;
 }
+
+fieldset {
+    border-radius: 25px;
+    border: 1px solid #73AD21;
+}
