upgrade SMS functionality for finish

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -49,7 +49,16 @@
     <legend>
       Events Hosted By you
     </legend>
-     You dont have any Event hosted. Start a new Event
+     You dont have any Event hosted. <a href="
+
+    mailto:appcreatorpune@gmail.com
+
+    ?subject=new+Event
+
+    &body=I+want+to+host+an+event
+
+    ">Start a new Event!!!</a>
+
   </fieldset>
   <br/>
   <br/>
