--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -31,8 +31,8 @@
         We thank our chief Guest who happens to be renowned International Car Driver and <b>Shiv Chatrapathi Award</b>
         winner <b>Mr. Sanjay Takale</b>
         <br/>
-        This event is Sponsered by <br/>
-        <img src="./assets/imgs/sp_image.png">
+        <!--This event is Sponsered by <br/>
+        <img src="./assets/imgs/sp_image.png">-->
         <br/>
         <ion-button  fill="outline" slot="end" (click)="gotoHome(item)">Go To Event</ion-button>
       </ion-list>
